[package]
name = "tokio-jrpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Simple tokio-based async JSON-RPC 2.0 client and server."
license = "MIT"
repository = "https://github.com/powhttp/tokio-jrpc"
readme = "README.md"
keywords = ["json-rpc", "jsonrpc", "rpc", "async", "tokio"]
categories = ["asynchronous", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "sync", "rt", "macros"] }
